# velox

./: CMakeLists.txt  INSTALL_CMD
substrait_consumer/: CMakeLists.txt  README.txt  consumer.cpp  example.cpp
substrait_consumer/aggregation_functions/: bitmap_or.cpp  reconstruct.cpp  registerAggregate.h
substrait_consumer/model/: aggregate.cpp
substrait_consumer/model-archive/: aggregate.cpp  join.cpp  n-way-join.cpp
substrait_consumer/scalar_functions/: bitmap_scalar.cpp  bitmap_scalar.h
substrait_consumer/split_engine_motivation/: single.cpp
velox/common/strings/: ByteStream.h
velox/dwio/parquet/writer/: Writer.cpp  Writer.h
velox/exec/: TableScan.cpp
velox/exec/tests/utils/: AssertQueryBuilder.cpp  AssertQueryBuilder.h
velox/substrait/: SubstraitParser.cpp  SubstraitToVeloxExpr.cpp  SubstraitToVeloxPlan.cpp  SubstraitToVeloxPlan.h
velox/substrait/proto/substrait/: algebra.proto
